// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JetpackSignup should render 1`] = `
<Connect(Localized(JetpackConnectMainWrapper))
  isWoo={false}
>
  <div
    className="jetpack-connect__authorize-form"
  >
    <Connect(Localized(AuthFormHeader))
      authQuery={
        Object {
          "authApproved": false,
          "blogname": "Example Blog",
          "clientId": 98765,
          "from": "banner-44-slide-1-dashboard",
          "homeUrl": "http://an.example.site",
          "jpVersion": "5.4",
          "nonce": "fooBarNonce",
          "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "siteIcon": "",
          "siteUrl": "http://an.example.site",
          "state": "1",
          "userEmail": "email@an.example.site",
        }
      }
      isWoo={false}
    />
    <Connect(Localized(SignupForm))
      disabled={false}
      email="email@an.example.site"
      footerLink={
        <LoggedOutFormLinks>
          <LoggedOutFormLinkItem
            href="/log-in/jetpack?redirect_to=https%3A%2F%2Fexample.com%2F&email_address=email%40an.example.site&from=banner-44-slide-1-dashboard"
          >
            Already have an account? Sign in
          </LoggedOutFormLinkItem>
          <JetpackConnectHelpButton />
        </LoggedOutFormLinks>
      }
      handleSocialResponse={[Function]}
      isSocialSignupEnabled={true}
      redirectToAfterLoginUrl="https://example.com/?auth_approved=true"
      submitButtonText="Create your account"
      submitForm={[Function]}
      submitting={false}
      suggestedUsername=""
    />
  </div>
</Connect(Localized(JetpackConnectMainWrapper))>
`;

exports[`JetpackSignup should render with locale suggestions 1`] = `
<Connect(Localized(JetpackConnectMainWrapper))
  isWoo={false}
>
  <div
    className="jetpack-connect__authorize-form"
  >
    <Connect(LocaleSuggestions)
      locale="es"
      path="/jetpack/connect/authorize/es"
    />
    <Connect(Localized(AuthFormHeader))
      authQuery={
        Object {
          "authApproved": false,
          "blogname": "Example Blog",
          "clientId": 98765,
          "from": "banner-44-slide-1-dashboard",
          "homeUrl": "http://an.example.site",
          "jpVersion": "5.4",
          "nonce": "fooBarNonce",
          "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "siteIcon": "",
          "siteUrl": "http://an.example.site",
          "state": "1",
          "userEmail": "email@an.example.site",
        }
      }
      isWoo={false}
    />
    <Connect(Localized(SignupForm))
      disabled={false}
      email="email@an.example.site"
      footerLink={
        <LoggedOutFormLinks>
          <LoggedOutFormLinkItem
            href="/log-in/jetpack/es?redirect_to=https%3A%2F%2Fexample.com%2F&email_address=email%40an.example.site&from=banner-44-slide-1-dashboard"
          >
            Already have an account? Sign in
          </LoggedOutFormLinkItem>
          <JetpackConnectHelpButton />
        </LoggedOutFormLinks>
      }
      handleSocialResponse={[Function]}
      isSocialSignupEnabled={true}
      locale="es"
      redirectToAfterLoginUrl="https://example.com/?auth_approved=true"
      submitButtonText="Create your account"
      submitForm={[Function]}
      submitting={false}
      suggestedUsername=""
    />
  </div>
</Connect(Localized(JetpackConnectMainWrapper))>
`;
